--- a/src/App.css
+++ b/src/App.css
@@ -6,7 +6,7 @@
 .navbar {
   background-color: #f8f8f9;
   padding: 1rem 2rem;
-  border-bottom: 1px solid #565895;
+  /*border-bottom: 1px solid #565895;*/
 }
 
 .flex {
@@ -22,7 +22,7 @@
   background-color: #fff;
   width: 14rem;
   height: calc(100vh);
-  border-right: 1px solid #565895;
+  /*border-right: 1px solid #565895;*/
 }
 
 .sidebar ul {
