--- a/src/App.css
+++ b/src/App.css
@@ -18,24 +18,56 @@
   width: 100%;
 }
 
-.sidebar {
+/********** SIDEBAR ***********/
+
+/*.sidebar {
   background-color: #fff;
-  width: 14rem;
+  width: 250px;
   height: calc(100vh);
-  /*border-right: 1px solid #565895;*/
+  position: relative;
+  left: -150px;
+  z-index: 1;
+  transition: 0.5s;
+  border-right: 1px solid #565895;
+}*/
+
+.sidebar.active{
+  left: 0;
 }
 
 .sidebar ul {
   list-style: none;
-  padding: 1rem 2rem;
+  padding-top: 20px;
+  padding-left: 35px;
 }
 
 .sidebar ul li{
-  margin-bottom: 1rem;
+  margin-bottom: 20px;
 }
 
 .sidebar ul li a{
+  font-weight: 500;
   text-decoration: none;
+}
+
+/*.toggle-sidebar {
+  position: absolute;
+  background-color: #f4c348;
+  z-index: 10;
+  top: 4%;
+  right: -10px;
+  border-radius: 50%;
+  transform: translateY(-40%);
+  width: 25px;
+  height: 25px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: white;
+}*/
+
+.close-sidebar {
+  width: -250px;
 }
 
 /*.sidebar ul li a.active{
@@ -113,3 +145,10 @@
   padding: 15px;
   margin: 0 auto;
 }
+
+.credit-card {
+  width: 18rem;
+  margin-left: 10px;
+  margin-bottom: 10px;
+}
+
